objects/Contact/fields/Charakteristika_vztahu__c.field-meta.xml
<CustomField>
    <fullName>Charakteristika_vztahu__c</fullName>
    <label>Charakteristika vztahu</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>