objects/Contact/fields/Dalsi_udaje_o_rodine__c.field-meta.xml
<CustomField>
    <fullName>Dalsi_udaje_o_rodine__c</fullName>
    <label>Další údaje o rodině</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>