objects/Contact/fields/Dar_sliben_od__c.field-meta.xml
<CustomField>
    <fullName>Dar_sliben_od__c</fullName>
    <description>Kdy má přijít dar</description>
    <inlineHelpText>Kdy má přijít dar</inlineHelpText>
    <label>Dar slíbený od</label>
    <type>Date</type>
</CustomField>