objects/Contact/fields/Darce__c.field-meta.xml
<CustomField>
    <fullName>Darce__c</fullName>
    <description>Je dárce nebo na něm pracujeme</description>
    <inlineHelpText>Je dárce nebo na něm pracujeme</inlineHelpText>
    <label>Stav dárce</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Dárce</fullName>
            </value>
            <value>
                <fullName>Potenciální dárce</fullName>
            </value>
            <value>
                <fullName>Nechce darovat</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>