objects/Contact/fields/Dary_celkem__c.field-meta.xml
<CustomField>
    <fullName>Dary_celkem__c</fullName>
    <description>Součet všech obdržených osobních darů.</description>
    <inlineHelpText>Součet všech obdržených osobních darů.</inlineHelpText>
    <label>Celková výše darů</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>