objects/Contact/fields/Dary_den_slibeni__c.field-meta.xml
<CustomField>
    <fullName>Dary_den_slibeni__c</fullName>
    <description>Kdy kontakt slíbil dar (den telefonátu, rozhovoru atp.)</description>
    <inlineHelpText>Kdy kontakt slíbil dar (den telefonátu, rozhovoru atp.)</inlineHelpText>
    <label>Den slíbení</label>
    <type>Date</type>
</CustomField>