objects/Contact/fields/Dary_perioda__c.field-meta.xml
<CustomField>
    <fullName>Dary_perioda__c</fullName>
    <label>Perioda darů</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Nerozhodnuto</fullName>
                <default>true</default>
                <label>Nerozhodnuto</label>
            </value>
            <value>
                <fullName>Měsíčně</fullName>
            </value>
            <value>
                <fullName>Ročně</fullName>
            </value>
            <value>
                <fullName>Nepravidelně</fullName>
            </value>
            <value>
                <fullName>Jednorázově</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>