objects/Contact/fields/Dary_vyradit_do__c.field-meta.xml
<CustomField>
    <fullName>Dary_vyradit_do__c</fullName>
    <description>Do kdy vyřadit kontakt z konverze na dárcovství</description>
    <inlineHelpText>Do kdy vyřadit kontakt z konverze na dárcovství</inlineHelpText>
    <label>Vyřadit z konverze do</label>
    <type>Date</type>
</CustomField>