objects/Contact/fields/Dary_vyse_posledniho__c.field-meta.xml
<CustomField>
    <fullName>Dary_vyse_posledniho__c</fullName>
    <description>Skutečná výše posledního přijatého daru.</description>
    <inlineHelpText>Skutečná výše posledního přijatého daru.</inlineHelpText>
    <label>Výše posledního daru</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>