objects/Contact/fields/Dary_vyse_slibeno__c.field-meta.xml
<CustomField>
    <fullName>Dary_vyse_slibeno__c</fullName>
    <label>Slíbená výše daru</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>