objects/Contact/fields/Dobrovolnik__c.field-meta.xml
<CustomField>
    <fullName>Dobrovolnik__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Kontakt je dobrovolníkem OZ/NAP</description>
    <inlineHelpText>Kontakt je dobrovolníkem OZ/NAP</inlineHelpText>
    <label>Dobrovolník</label>
    <type>Checkbox</type>
</CustomField>