objects/Contact/fields/Expertyza__c.field-meta.xml
<CustomField>
    <fullName>Expertyza__c</fullName>
    <label>Expertíza</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>CSR - společenská odpovědnost</fullName>
            </value>
            <value>
                <fullName>doprava, cyklistika</fullName>
            </value>
            <value>
                <fullName>ekonomika, cirkulární ekonomika</fullName>
            </value>
            <value>
                <fullName>energetika, obnovitelné zdroje</fullName>
            </value>
            <value>
                <fullName>facility management, zelené stavění</fullName>
            </value>
            <value>
                <fullName>fotografie, film</fullName>
            </value>
            <value>
                <fullName>fundraising</fullName>
            </value>
            <value>
                <fullName>investice, finance</fullName>
            </value>
            <value>
                <fullName>IT, programování</fullName>
            </value>
            <value>
                <fullName>lidské zdroje, personalistika</fullName>
            </value>
            <value>
                <fullName>management, krizové řízení</fullName>
            </value>
            <value>
                <fullName>odpady, recyklace</fullName>
            </value>
            <value>
                <fullName>PR, média, marketing, komunikace</fullName>
            </value>
            <value>
                <fullName>půda, zemědělství, lesnictví</fullName>
            </value>
            <value>
                <fullName>tlumočení, překlady</fullName>
            </value>
            <value>
                <fullName>urbanismus, architektura, zelené stavění</fullName>
            </value>
            <value>
                <fullName>veřejná správa</fullName>
            </value>
            <value>
                <fullName>vodní hospodářství</fullName>
            </value>
            <value>
                <fullName>Žádná</fullName>
            </value>
            <value>
                <fullName>zdravotnictví</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>