objects/Contact/fields/Extra_komunikace__c.field-meta.xml
<CustomField>
    <fullName>Extra_komunikace__c</fullName>
    <label>Extra nastavení komunikace</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Je VIP partner</fullName>
            </value>
            <value>
                <fullName>Je VIP partner, když účet splňuje VIP</fullName>
            </value>
            <value>
                <fullName>Není VIP partner</fullName>
            </value>
            <value>
                <fullName>Je příjemcem výroční zprávy</fullName>
            </value>
            <value>
                <fullName>Není příjemcem výroční zprávy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>