objects/Contact/fields/Funkce_ve_firme__c.field-meta.xml
<CustomField>
    <fullName>Funkce_ve_firme__c</fullName>
    <inlineHelpText>Např. ředitel, dělník apod. Dle vizitky.</inlineHelpText>
    <label>Funkce ve firmě</label>
    <length>200</length>
    <type>Text</type>
</CustomField>