objects/Contact/fields/ID_kontaktu__c.field-meta.xml
<CustomField>
    <fullName>ID_kontaktu__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ID kontaktu</label>
    <type>Text</type>
</CustomField>