objects/Contact/fields/individualni_darce__c.field-meta.xml
<CustomField>
    <fullName>individualni_darce__c</fullName>
    <description>Položka slouží k dotazům na databázi, zda daná osoba je individuálním dárce či nikoliv (bez vztahu na firmu apod.)</description>
    <label>Individuální dárce (zastaralé)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Není</fullName>
                <default>true</default>
                <label>Není</label>
            </value>
            <value>
                <fullName>Je individuálním dárcem</fullName>
            </value>
            <value>
                <fullName>Vyjádřil zájem</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>