objects/Contact/fields/Ji_ve_firm_nepracuje__c.field-meta.xml
<CustomField>
    <fullName>Ji_ve_firm_nepracuje__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Již ve firmě nepracuje</label>
    <type>Checkbox</type>
</CustomField>