objects/Contact/fields/Kraj_firmy__c.field-meta.xml
<CustomField>
    <fullName>Kraj_firmy__c</fullName>
    <formula>IF( Account.BillingState == null, &quot;není vyplněno u firmy&quot;, Account.BillingState)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Kraj - firma</label>
    <type>Text</type>
</CustomField>