objects/Contact/fields/Kraj_soukrome__c.field-meta.xml
<CustomField>
    <fullName>Kraj_soukrome__c</fullName>
    <label>Kraj</label>
    <length>100</length>
    <type>Text</type>
</CustomField>