objects/Contact/fields/LinkedIn_ID__c.field-meta.xml
<CustomField>
    <fullName>LinkedIn_ID__c</fullName>
    <label>LinkedIn ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>