objects/Contact/fields/M_sto_firmy__c.field-meta.xml
<CustomField>
    <fullName>M_sto_firmy__c</fullName>
    <formula>IF( Account.BillingCity == null, &quot;není vyplněno u firmy&quot;, Account.BillingCity)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Město - firma</label>
    <type>Text</type>
</CustomField>