objects/Contact/fields/M_sto_soukrome__c.field-meta.xml
<CustomField>
    <fullName>M_sto_soukrome__c</fullName>
    <label>Město</label>
    <length>100</length>
    <type>Text</type>
</CustomField>