objects/Contact/fields/Majetek__c.field-meta.xml
<CustomField>
    <fullName>Majetek__c</fullName>
    <label>Majetek</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>