objects/Contact/fields/Mesicni_dar__c.field-meta.xml
<CustomField>
    <fullName>Mesicni_dar__c</fullName>
    <label>Měsíční dar</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>