objects/Contact/fields/Mesicni_prijem__c.field-meta.xml
<CustomField>
    <fullName>Mesicni_prijem__c</fullName>
    <label>Měsíční příjem</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>