objects/Contact/fields/Mobilni_telefon_2__c.field-meta.xml
<CustomField>
    <fullName>Mobilni_telefon_2__c</fullName>
    <label>Mobilní telefon 2</label>
    <type>Phone</type>
</CustomField>