objects/Contact/fields/Na_co_se_NEPTAT__c.field-meta.xml
<CustomField>
    <fullName>Na_co_se_NEPTAT__c</fullName>
    <label>Na co se NEPTAT</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>