objects/Contact/fields/Nepodporuje__c.field-meta.xml
<CustomField>
    <fullName>Nepodporuje__c</fullName>
    <label>Nepodporuje</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>