objects/Contact/fields/Osloveni__c.field-meta.xml
<CustomField>
    <fullName>Osloveni__c</fullName>
    <inlineHelpText>Píšeme ve tvaru: Vážený pane Nováku (bez čárky!)</inlineHelpText>
    <label>Osloveni</label>
    <length>100</length>
    <type>Text</type>
</CustomField>