objects/Contact/fields/Pocet_deti__c.field-meta.xml
<CustomField>
    <fullName>Pocet_deti__c</fullName>
    <label>Počet dětí</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>