objects/Contact/fields/Podporuje__c.field-meta.xml
<CustomField>
    <fullName>Podporuje__c</fullName>
    <label>Podporuje</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>