objects/Contact/fields/Pohlav_deti__c.field-meta.xml
<CustomField>
    <fullName>Pohlav_deti__c</fullName>
    <label>Pohlaví dětí</label>
    <length>150</length>
    <type>Text</type>
</CustomField>