objects/Contact/fields/Posledn_dar_prijat__c.field-meta.xml
<CustomField>
    <fullName>Posledn_dar_prijat__c</fullName>
    <description>Datum, kdy jsme přijali poslední ossobní dar.</description>
    <inlineHelpText>Datum, kdy jsme přijali poslední ossobní dar.</inlineHelpText>
    <label>Poslední dar přijat</label>
    <type>Date</type>
</CustomField>