objects/Contact/fields/Posledni_Akce__c.field-meta.xml
<CustomField>
    <fullName>Posledni_Akce__c</fullName>
    <label>Poslední Akce</label>
    <length>255</length>
    <type>Text</type>
</CustomField>