objects/Contact/fields/Pravidelny__c.field-meta.xml
<CustomField>
    <fullName>Pravidelny__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Pravidelně navštěvuje OZ</description>
    <inlineHelpText>Pravidelně navštěvuje OZ</inlineHelpText>
    <label>Pravidelný návštěvník</label>
    <type>Checkbox</type>
</CustomField>