objects/Contact/fields/PSC_firmy__c.field-meta.xml
<CustomField>
    <fullName>PSC_firmy__c</fullName>
    <formula>IF( Account.BillingPostalCode == null, &quot;není vyplněno u firmy&quot;, Account.BillingPostalCode)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PSČ - firma</label>
    <type>Text</type>
</CustomField>