objects/Contact/fields/PSC_soukrome__c.field-meta.xml
<CustomField>
    <fullName>PSC_soukrome__c</fullName>
    <label>PSČ</label>
    <length>100</length>
    <type>Text</type>
</CustomField>