objects/Contact/fields/Rodinny_stav__c.field-meta.xml
<CustomField>
    <fullName>Rodinny_stav__c</fullName>
    <label>Rodinný stav</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Svobodný/á</fullName>
            </value>
            <value>
                <fullName>Ženatý/Vdaná</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>