objects/Contact/fields/Rok_narozeni__c.field-meta.xml
<CustomField>
    <fullName>Rok_narozeni__c</fullName>
    <label>Rok narození</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>