objects/Contact/fields/S_kym_se_zna__c.field-meta.xml
<CustomField>
    <fullName>S_kym_se_zna__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>S kým se zná</label>
    <referenceTo>Pracovnik__c</referenceTo>
    <relationshipLabel>Kontakty</relationshipLabel>
    <relationshipName>Kontakty</relationshipName>
    <type>Lookup</type>
</CustomField>