objects/Contact/fields/St_t_firmy__c.field-meta.xml
<CustomField>
    <fullName>St_t_firmy__c</fullName>
    <formula>IF( Account.BillingCountry == null, &quot;není vyplněno u firmy&quot;, Account.BillingCountry)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Stát - firma</label>
    <type>Text</type>
</CustomField>