objects/Contact/fields/St_t_soukrome__c.field-meta.xml
<CustomField>
    <fullName>St_t_soukrome__c</fullName>
    <label>Stát</label>
    <length>100</length>
    <type>Text</type>
</CustomField>