objects/Contact/fields/Statutarni_organ__c.field-meta.xml
<CustomField>
    <fullName>Statutarni_organ__c</fullName>
    <label>SR nebo DR NAP</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Správní rada Nadace Partnerství</fullName>
            </value>
            <value>
                <fullName>Dozorčí rada Nadace Partnerství</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>