objects/Contact/fields/Stav__c.field-meta.xml
<CustomField>
    <fullName>Stav__c</fullName>
    <formula>Account.Stav__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Stav</label>
    <type>Text</type>
</CustomField>