objects/Contact/fields/Stav_pro_rozesilku__c.field-meta.xml
<CustomField>
    <fullName>Stav_pro_rozesilku__c</fullName>
    <label>Stav pro rozesílku</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Plná schránka</fullName>
            </value>
            <value>
                <fullName>Email neexistuje</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>