objects/Contact/fields/Test_related_field__c.field-meta.xml
<CustomField>
    <fullName>Test_related_field__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Test related field</label>
    <referenceTo>Akce__c</referenceTo>
    <relationshipLabel>Kontakty</relationshipLabel>
    <relationshipName>Kontakty</relationshipName>
    <type>Lookup</type>
</CustomField>