objects/Contact/fields/Ulice_firmy__c.field-meta.xml
<CustomField>
    <fullName>Ulice_firmy__c</fullName>
    <formula>IF( Account.BillingStreet == null, &quot;není vyplněno u firmy&quot;, Account.BillingStreet)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ulice - firma</label>
    <type>Text</type>
</CustomField>