objects/Contact/fields/Ulice_soukrome__c.field-meta.xml
<CustomField>
    <fullName>Ulice_soukrome__c</fullName>
    <label>Ulice</label>
    <length>100</length>
    <type>Text</type>
</CustomField>