objects/Contact/fields/Variabilni_symbol__c.field-meta.xml
<CustomField>
    <fullName>Variabilni_symbol__c</fullName>
    <displayFormat>{YY}{000000}</displayFormat>
    <label>Variabilní symbol dárce</label>
    <type>AutoNumber</type>
</CustomField>