objects/Contact/fields/Ve_funkci_od__c.field-meta.xml
<CustomField>
    <fullName>Ve_funkci_od__c</fullName>
    <label>Ve funkci od</label>
    <type>TextArea</type>
</CustomField>