objects/Contact/fields/Vek_nejmladsiho_ditete__c.field-meta.xml
<CustomField>
    <fullName>Vek_nejmladsiho_ditete__c</fullName>
    <label>Věk nejmladšího dítěte</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>