objects/Contact/fields/Vek_nejstarsiho_ditete__c.field-meta.xml
<CustomField>
    <fullName>Vek_nejstarsiho_ditete__c</fullName>
    <label>Věk nejstaršího dítěte</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>