objects/Contact/fields/Vyucovane_predmety__c.field-meta.xml
<CustomField>
    <fullName>Vyucovane_predmety__c</fullName>
    <label>Vyučované předměty</label>
    <length>150</length>
    <type>Text</type>
</CustomField>