objects/Contact/fields/Zainteresovanost__c.field-meta.xml
<CustomField>
    <fullName>Zainteresovanost__c</fullName>
    <label>Zainteresovanost</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Nezná NAP</fullName>
            </value>
            <value>
                <fullName>Zná NAP</fullName>
            </value>
            <value>
                <fullName>Účastnil se akce</fullName>
            </value>
            <value>
                <fullName>Pracoval s námi</fullName>
            </value>
            <value>
                <fullName>Pracoval pro nás</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>