objects/Contact/fields/Zajmy__c.field-meta.xml
<CustomField>
    <fullName>Zajmy__c</fullName>
    <label>Zájmy</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>