objects/Contact/fields/Zamereni_kontaktu__c.field-meta.xml
<CustomField>
    <fullName>Zamereni_kontaktu__c</fullName>
    <description>Používá se pro kontakty z médií.</description>
    <inlineHelpText>Používá se pro kontakty z médií.</inlineHelpText>
    <label>Zaměření kontaktu</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Architektura/Zelene staveni</fullName>
                <label>Architektura/zelené stavění</label>
            </value>
            <value>
                <fullName>bez zaměření</fullName>
                <label>Bez zaměření</label>
            </value>
            <value>
                <fullName>Bulvár</fullName>
            </value>
            <value>
                <fullName>Cyklistické</fullName>
            </value>
            <value>
                <fullName>Domácí politika</fullName>
            </value>
            <value>
                <fullName>Domaci zpravodajstvi</fullName>
                <label>Domácí zpravodajství</label>
            </value>
            <value>
                <fullName>Doprava</fullName>
            </value>
            <value>
                <fullName>Doprava a veřejná prostranství</fullName>
            </value>
            <value>
                <fullName>Ekonomie</fullName>
                <label>Ekonomie a finance</label>
            </value>
            <value>
                <fullName>Foto/Film/Hudba</fullName>
            </value>
            <value>
                <fullName>Gastro</fullName>
            </value>
            <value>
                <fullName>Historie</fullName>
            </value>
            <value>
                <fullName>Hlavolamy/zábava</fullName>
            </value>
            <value>
                <fullName>Hobby</fullName>
            </value>
            <value>
                <fullName>jiné</fullName>
                <label>Jiné</label>
            </value>
            <value>
                <fullName>Kultura</fullName>
            </value>
            <value>
                <fullName>Lifestyle muzske</fullName>
                <label>Lifestyle mužské</label>
            </value>
            <value>
                <fullName>Lifestyle zenske</fullName>
                <label>Lifestyle ženské</label>
            </value>
            <value>
                <fullName>Marketing</fullName>
                <label>Marketing a komunikace</label>
            </value>
            <value>
                <fullName>Mateřství a rodina</fullName>
            </value>
            <value>
                <fullName>Móda</fullName>
            </value>
            <value>
                <fullName>Pedagogické</fullName>
            </value>
            <value>
                <fullName>Priroda/ekologie</fullName>
                <label>Příroda/ekologie</label>
            </value>
            <value>
                <fullName>Společenské</fullName>
            </value>
            <value>
                <fullName>sport</fullName>
                <label>Sport</label>
            </value>
            <value>
                <fullName>Turisticke/Cestovani</fullName>
                <label>Turistika/cestování</label>
            </value>
            <value>
                <fullName>Věda/Technika</fullName>
            </value>
            <value>
                <fullName>Veřejná správa</fullName>
            </value>
            <value>
                <fullName>Vinařské</fullName>
            </value>
            <value>
                <fullName>Zahrádkářství</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>