objects/Contact/recordTypes/Kontakt.recordType-meta.xml
<RecordType>
    <fullName>Kontakt</fullName>
    <active>true</active>
    <label>Kontakt</label>
</RecordType>