objects/Contact/recordTypes/Novinar.recordType-meta.xml
<RecordType>
    <fullName>Novinar</fullName>
    <active>false</active>
    <label>Novinář</label>
</RecordType>