objects/Contact/recordTypes/Pedagogicky_pracovnik.recordType-meta.xml
<RecordType>
    <fullName>Pedagogicky_pracovnik</fullName>
    <active>true</active>
    <label>Pedagogický pracovník</label>
</RecordType>