objects/Contact/validationRules/Extra_nastaveni_komunikace.validationRule-meta.xml
<ValidationRule>
    <fullName>Extra_nastaveni_komunikace</fullName>
    <active>true</active>
    <errorConditionFormula>INCLUDES(Extra_komunikace__c , &quot;Je VIP partner&quot;)
&amp;&amp;
INCLUDES(Extra_komunikace__c , &quot;Není VIP partner&quot;)</errorConditionFormula>
    <errorDisplayField>Extra_komunikace__c</errorDisplayField>
    <errorMessage>Vyberte pouze jednu z možnéstí Je/Není VIP partner</errorMessage>
</ValidationRule>