objects/Contact/listViews/AllContacts.listView-meta.xml
<ListView>
    <fullName>AllContacts</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>Funkce_ve_firme__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PARENT.NAME</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>CONTACT.CREATED_DATE</field>
        <operation>equals</operation>
        <value>6/29/2020 12:00 AM</value>
    </filters>
    <label>Všechny kontakty</label>
</ListView>