objects/Contact/listViews/Obce_s_roz_enou_p_sobnost.listView-meta.xml
<ListView>
    <fullName>Obce_s_roz_enou_p_sobnost</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>FULL_NAME</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>Funkce_ve_firme__c</columns>
    <columns>Kraj_soukrome__c</columns>
    <columns>Account.ORP__c</columns>
    <filterScope>Everything</filterScope>
    <label>Obce s rozšířenou působností</label>
</ListView>