objects/Contact/listViews/Redakce.listView-meta.xml
<ListView>
    <fullName>Redakce</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTACT.DEPARTMENT</field>
        <operation>equals</operation>
        <value>Redakce</value>
    </filters>
    <label>Redakce</label>
    <language>cs</language>
</ListView>